gameWebsite/ohShoot/ohShoot.css
* {
    margin: 0;
    padding: 0;
    list-style: none;
    text-decoration: none;
}


.header {
    position: fixed;
    z-index: 10;
    top: 0;
    left: 0;
    width: 100%;
    height: 80px;
    display: block;
    background-color: #101010;
}

.inner_header {
    padding-left: 30px;
    width: 100%;
    height: 100%;
    display: block;
    margin: 0 auto;
    /* background-color: red; */
}

.logo_container {
    height: 100%;
    display: table;
    float: left;
}

.logo_container h1 {
    color: white;
    height: 100%;
    display: table-cell;
    vertical-align: middle;
    font-size: 32px;
    font-weight: 200;
}

.donate_button {
    color: #65ff00;
    padding: 2px 2px;
    padding-right: 35px;
}

.logo_container h1 span {
    font-weight: 800;
}

.navigation {
    float: right;
    height: 100%;
}

.navigation a {
    height: 100%;
    display: table;
    float: left;
    padding: 0px 20px;
}

.navigation a:last-child {
    padding-right: 0;
}

.navigation a li {
    display: table-cell;
    vertical-align: middle;
    height: 100%;
    color: white;
    font-size: 30px;
}

.navigation a li:hover {
    opacity: 0.5;
}

/* Above is the CSS for the header */

/* 
#announce {
    font-size: 25px;

}

#announce2 {
    font-size: 20px;

}

.ohShootBtns {
    padding: 15px 25px 15px;
} */

/* .resetBtn {
    color: red;
    padding: 15px;
} */



.ohShootTitle {
    margin-top: 80px; /* change to 80px when finalizing */
        text-align: center;
}


 .main {
    /* padding: 5px; */
    margin-top: 80px;
    max-height: 450px;
    display: flex;
    /* justify-content: space-evenly; */
    justify-content: center;
     background-color: orangered;
        /* margin-top: 85px; */
 }


.mainYou {
    min-width: 18%;
    max-width: 18%;
    display: flex;
    flex-direction: column;
    text-align: center;
    justify-content: space-evenly;
    background-color: yellow;
    /* align-content: space-between */
}

.mainYourCard {
    min-width: 12%;
    max-width: 12%;
        background-color: blueviolet;
}

/* .mainYouCard.img {
   max-height: 100%;
    max-width: 42%;
} */

.mainMenu {
    min-width: 32%;
    max-width: 32%;
    display: flex;
    flex-direction: column;
    text-align: center;
    justify-content: space-evenly;
    background-color: orange;
}

.mainEnemyCard {
    min-width: 12%;
    max-width: 12%;
    background-color: green;
}

.mainEnemy {
    min-width: 18%;
    max-width: 18%;
    display: flex;
    flex-direction: column;
    text-align: center;
    justify-content: space-evenly;
    background-color: grey;
}
/* .handPicture {
    max-width: 90%;
    max-height: 150px;
} */




/* above is CSS for oh SHOOT! */
/* align-items: center; */
/* align-content:baseline */
/* temporary to visualize box */
/* position: relative; */
/* text-align: center; */
/* padding-top: 40px; */
/* padding-bottom: 20px; */
/* font-size: 50px; */

